# verzel-motors

./: .editorconfig  .gitignore  Makefile  README.MD
.docker/: docker-compose.yml
backend/: .env.example  Dockerfile  pyproject.toml
backend/app/: main.py  models.py  schemas.py  security.py  settings.py
backend/app/routes/: auth.py  users.py  vehicles.py
backend/migrations/: env.py
backend/migrations/versions/: 8d64794fad37_initial_migrations.py  90f6d40aaf4d_implement_vehicles_table.py  d75e68d61451_set_is_superuser_as_default_true.py  e04e4d4880a7_fix_irregulars_properties_and_add_price_.py
frontend/: .env.example  Dockerfile  index.html  package.json  tailwind.config.ts  tsconfig.json
frontend/src/: App.tsx  main.tsx
frontend/src/components/Authenticated/: index.tsx
frontend/src/components/CarsList/: index.tsx
frontend/src/components/CarsList/CardCar/: index.tsx
frontend/src/components/Footer/: index.tsx
frontend/src/components/Navbar/: index.tsx
frontend/src/components/UnAuthenticated/: index.tsx
frontend/src/context/Auth/: index.tsx
frontend/src/context/Vehicles/: index.tsx
frontend/src/enums/: Cookies.ts  Endpoins.ts  LocalStorage.ts  Pathnames.tsx
frontend/src/hooks/useAuth/: index.tsx
frontend/src/hooks/useLogged/: index.ts
frontend/src/hooks/useVehicle/: index.tsx
frontend/src/interfaces/: index.ts
frontend/src/local/: mock.ts
frontend/src/pages/Homepage/: index.tsx
frontend/src/pages/Session/: index.tsx
frontend/src/schemas/: index.ts
frontend/src/services/: api.ts
frontend/src/styles/: index.css
(+6 files in other folders)
