[tool.poetry]
name = "mk-verzel-motors-backend"
version = "0.1.0"
description = ""
authors = ["Maksuel Nascimento <mk-nascimento@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.108.0"
uvicorn = {extras = ["standard"], version = "^0.25.0"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
